# napari-deepfinder-tirfm

./: README.md  setup.cfg  tox.ini
src/napari_deepfinder_tirfm/: napari.yaml
src/napari_deepfinder_tirfm/_tests/: test_reader.py  test_widget.py  test_writer.py
